--- a/app/templates/courses/python.html
+++ b/app/templates/courses/python.html
@@ -66,8 +66,8 @@
       {{create_DA_Item(modal_id="doc_py_di_6d", title='List Functions', doc=doc, hidden_val=py_course[30])}}
       {{create_DA_Item(modal_id="doc_py_di_7", title='Dictionaries', doc=doc, hidden_val=py_course[31])}} 
     {% else %}
-      {{create_DA_Item(modal_id="hw_py_di_4", title='Lists, Tuples, & Sets Homework', doc=doc, hidden_val=py_course[5])}} 
-      {{create_DA_Item(modal_id="ans_py_di_4", title='Lists, Tuples, & Sets Answers', doc=doc, hidden_val=py_course[12])}}
+      {{create_DA_Item(modal_id="hw_py_di_4", title='Lists, Tuples, & Sets Homework', doc=doc, hidden_val="hw_py_hv_4")}} 
+      {{create_DA_Item(modal_id="ans_py_di_4", title='Lists, Tuples, & Sets Answers', doc=doc, hidden_val="ans_py_hv_4")}}
     {% endif %}
     {% endcall %}
 
