--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -22,7 +22,7 @@
   </title>
 
   <!-- Favicon -->
-  <link href="{{ url_for('static', filename='assets/img/brand/logo.png') }}" rel="icon" type="image/png">
+  <link href="{{ url_for('static', filename='assets/img/brand/title-logo.png') }}" rel="icon" type="image/png">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
