--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -16,7 +16,7 @@
           <div class="col px-0">
             <div class="row align-items-center">
               <div class="col-lg-12">
-                <!-- <h1 class="display-1 text-white" style="text-align: center;">Ember Intiative</h1> -->
+                <h1 class="display-1 text-white" style="text-align: center;">The Ember Initiative</h1>
                 <p class="lead text-white" style="text-align: center;">
                   
                 </p>
