--- a/app/templates/pages/aboutus.html
+++ b/app/templates/pages/aboutus.html
@@ -186,7 +186,7 @@
               <div class="pt-4 text-center">
                 <h5 class="title">
                   <span class="d-block mb-1">Kevin Pradjinata</span>
-                  <small class="h6 text-muted">Assistant to the Programs Director</small>
+                  <small class="h6 text-muted">Operations</small>
                 </h5>
                 
               </div>
