--- a/app/templates/courses/swift.html
+++ b/app/templates/courses/swift.html
@@ -34,6 +34,9 @@
 
 <!-- Add pausing functionality instead -->
 <script src="/static/assets/js/question.js"></script>
+<script>
+  
+</script>
 
 
 {% endblock content %}
