--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -3,7 +3,7 @@
   <header class="header-global">
       <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
         <div class="container">
-          <img src="{{ url_for('static', filename='assets/img/brand/logo.png') }}" alt="" height="15%" width="15%" style="margin-top: 4px;">
+          <img src="{{ url_for('static', filename='assets/img/brand/logo.png') }}" alt="" height="15%" width="15%" style="margin-top: 4px;margin-right: 20px;">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -13,7 +13,7 @@
                 <div class="col-6 collapse-brand">
                   <a href="/">
                     <!-- <h3 style="color: white;">Ember Init.</h2> -->
-                      <img src="{{ url_for('static', filename='assets/img/brand/logo.png') }}" alt="">
+                      <img src="{{ url_for('static', filename='assets/img/brand/logo.png') }}" alt="" style="margin-right: 20px;">
                   </a>
                 </div>
                 <div class="col-6 collapse-close">
