--- a/app/templates/accounts/login.html
+++ b/app/templates/accounts/login.html
@@ -26,13 +26,14 @@
               <div class="card-body px-lg-5 py-lg-5">
                 <div class="text-center text-muted mb-4">
                   <h1>Log In</h1>
+                  <p style="color: black;">To access our free introductory courses!!</p>
                   <small>
                     
                     {% if msg %}
                       <span class="text-danger">{{ msg | safe }}</span>
                     {% else %}
 
-                       <a href={{ url_for('register') }} >OR Create your own user</a>   
+                       <a href={{ url_for('register') }}>Or create your own account!</a>   
                     {% endif %} 
 
                   </small>
@@ -75,9 +76,6 @@
             <div class="row mt-3">
               <div class="col-6">
                 <a href={{ url_for('register') }} class="text-light"><small>Create account</small></a>
-              </div>
-              <div class="col-6 text-right">
-                <a href="https://appseed.us/support" class="text-light"><small>Get support</small></a>
               </div>
             </div>
             
