--- a/app/templates/pages/contactus.html
+++ b/app/templates/pages/contactus.html
@@ -8,7 +8,7 @@
   
     <section class="section section-lg pt-lg-0">
       <div class="shape">
-        <img src="{{ url_for('static', filename='assets/img/theme/index.png') }}" alt="" class="img-fluid" style="width: 100%; height: 550px; ">
+        <img src="{{ url_for('static', filename='assets/img/theme/index.jpg') }}" alt="" class="img-fluid" style="width: 100%; height: 550px; ">
       </div>
       <div class="container">
         <div class="row justify-content-center mt--300">
