--- a/app/templates/pages/index.html
+++ b/app/templates/pages/index.html
@@ -10,13 +10,13 @@
       <section class="section section-lg section-shaped pb-250">
         
         <div class="shape">
-          <img src="{{ url_for('static', filename='assets/img/theme/index.png') }}" alt="" class="img-fluid" style="width: 100%; height:100%;">
+          <img src="{{ url_for('static', filename='assets/img/theme/index.jpg') }}" alt="" class="img-fluid" style="width: 100%; height:100%;">
         </div>
         <div class="container py-lg-md d-flex">
           <div class="col px-0">
             <div class="row align-items-center">
               <div class="col-lg-12">
-                <h1 class="display-1 text-white" style="text-align: center;">The Ember Initiative</h1>
+                <h1 class="display-1 text-white text-uppercase" style="text-align: center;"> <img src="{{ url_for('static', filename='assets/img/brand/title-logo.png') }}" alt="" height="10%" width="10%"> <strong>The Ember Initiative</strong></h1>
                 <p class="lead text-white" style="text-align: center;">
                   
                 </p>
