add gofundme link

--- a/app/templates/pages/contactus.html
+++ b/app/templates/pages/contactus.html
@@ -36,7 +36,9 @@
                 <br>
                 <br>
                 <div>
-                  <button type="button" class="btn btn-danger btn-round btn-block btn-lg">Donate</button>
+                  <a href="https://www.gofundme.com/f/qj6j8-the-ember-initiative?utm_source=customer&utm_medium=copy_link&utm_campaign=p_cf+share-flow-1">
+                    <button type="button" class="btn btn-danger btn-round btn-block btn-lg">Donate</button>
+                  </a>
                 </div>
               </div>
             </div>
