--- a/app/templates/layouts/default-fullscreen.html
+++ b/app/templates/layouts/default-fullscreen.html
@@ -34,6 +34,8 @@
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js' integrity='sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI' crossorigin='anonymous'></script>
   <!-- Argon CSS -->
   <link type="text/css" href="/static/assets/css/argon.css" rel="stylesheet">
+  <link href="{{url_for('static', filename =  'assets/css/prism.css' )}} " rel="stylesheet">
+<script src=" {{url_for('static', filename =  'assets/js/prism.js' )}} "></script>
 </head>
 
 <body>
