syntax highlighting + photo

--- a/app/templates/pages/aboutus.html
+++ b/app/templates/pages/aboutus.html
@@ -168,7 +168,7 @@
           <br>
           <br>
         <div class="row">
-          <div class="col-md-6 col-lg-6 mb-5 mb-lg-0">
+          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
             <div class="px-4">
               <img alt="image" src="{{ url_for('static', filename='assets/img/team-members/chirag.jpg') }}" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
               <div class="pt-4 text-center">
@@ -180,7 +180,19 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-6 mb-5 mb-lg-0">
+          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
+            <div class="px-4">
+              <img alt="image" src="{{ url_for('static', filename='assets/img/team-members/chris.jpg') }}" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+              <div class="pt-4 text-center">
+                <h5 class="title">
+                  <span class="d-block mb-1">Christopher Chou</span>
+                  <small class="h6 text-muted">Operations Lead</small>
+                </h5>
+
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
             <div class="px-4">
               <img alt="image" src="{{ url_for('static', filename='assets/img/team-members/kevin.png') }}" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
               <div class="pt-4 text-center">
