--- a/app/templates/layouts/default-fullscreen.html
+++ b/app/templates/layouts/default-fullscreen.html
@@ -26,14 +26,16 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
-  <link href="/static/assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+  <link href="{{ url_for('static' ,filename = 'assets/vendor/nucleo/css/nucleo.css') }}" rel="stylesheet">
   <link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css rel="stylesheet">
   
   <script src='https://code.jquery.com/jquery-3.5.1.min.js' integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0='crossorigin='anonymous'></script>
   <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous'></script>
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js' integrity='sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI' crossorigin='anonymous'></script>
   <!-- Argon CSS -->
-  <link type="text/css" href="/static/assets/css/argon.css" rel="stylesheet">
+  <link type="text/css" href=" {{ url_for('static', filename = 'assets/css/argon.min.css')}}" rel="stylesheet">
+  <link href="{{url_for('static', filename =  'assets/css/prism.css' )}} " rel="stylesheet">
+<script src=" {{url_for('static', filename =  'assets/js/prism.js' )}} "></script>
 </head>
 
 <body>
